// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FULL stacking order (bubble + bars + stroke + shadow + effects + underline) > the combined-clip op trace is a stable golden artifact 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "beginPath",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "rectFill",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "beginPath",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "rectFill",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 8,
    "op": "strokeText",
    "shadowBlur": 3,
    "shadowColor": "rgba(0, 0, 0, 0.6)",
    "strokeStyle": "rgba(0, 0, 0, 0)",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 8,
    "op": "strokeText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "strokeStyle": "rgba(0, 0, 0, 1)",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 3,
    "op": "strokeText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "strokeStyle": "rgba(255, 255, 255, 1)",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 10,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 5,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 0,
    "y": 0,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 2.828,
    "y": 2.828,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 2.121,
    "y": 2.121,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 1.414,
    "y": 1.414,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Stack",
    "x": 0.707,
    "y": 0.707,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "#00ff00",
    "op": "fillRect",
    "x": -25,
    "y": 28.2,
  },
]
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > bubble — full opacity vs zero opacity (zero = no bubble at all) 1`] = `
{
  "full": {
    "color": "rgba(255, 0, 0, 1)",
    "paddingX": 8,
    "paddingY": 8,
    "radius": 4,
  },
  "zero": null,
}
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > bubble — huge radius collapses to a pill (clamped to half min dim) 1`] = `
{
  "rect": {
    "h": 40,
    "r": 20,
    "w": 200,
    "x": -100,
    "y": -20,
  },
  "resolved": {
    "color": "rgba(16, 24, 32, 1)",
    "paddingX": 0,
    "paddingY": 0,
    "radius": 9999,
  },
}
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > bubble — zero padding hugs the block exactly 1`] = `
{
  "h": 40,
  "r": 0,
  "w": 200,
  "x": -100,
  "y": -20,
}
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > highlight bar — full opacity vs zero opacity (zero = no bars) 1`] = `
{
  "full": {
    "color": "rgba(0, 255, 0, 1)",
    "mode": "word",
    "paddingX": 0,
    "paddingY": 0,
    "radius": 0,
  },
  "zero": null,
}
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > highlight bars — per-word vs full-line resolved spec 1`] = `
{
  "line": {
    "color": "rgba(255, 230, 0, 0.4)",
    "mode": "line",
    "paddingX": 2,
    "paddingY": 2,
    "radius": 2,
  },
  "word": {
    "color": "rgba(255, 230, 0, 0.4)",
    "mode": "word",
    "paddingX": 2,
    "paddingY": 2,
    "radius": 2,
  },
}
`;

exports[`decoration extremes (resolved specs + geometry snapshots) > underline + strike at a LARGE font size — size-scaled rule traces 1`] = `
[
  {
    "fillStyle": "#ff0000",
    "x": -15,
    "y": 56.4,
  },
  {
    "fillStyle": "rgba(255, 255, 255, 1)",
    "x": -15,
    "y": -9.75,
  },
]
`;

exports[`effect stack ORDER changes the op trace > glow→neon golden trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 10,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 5,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 12,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 6,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 4,
    "op": "strokeText",
    "shadowBlur": 4,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "strokeStyle": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 2,
    "op": "strokeText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "strokeStyle": "#ffffff",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
]
`;

exports[`effect stack ORDER changes the op trace > neon→glow golden trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 12,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 6,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 4,
    "op": "strokeText",
    "shadowBlur": 4,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "strokeStyle": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 2,
    "op": "strokeText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "strokeStyle": "#ffffff",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 10,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 5,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > 3d: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 15.655999999999999,
    "y": 25.656,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 14.949,
    "y": 24.948999999999998,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 14.242,
    "y": 24.242,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 13.535,
    "y": 23.535,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12.828,
    "y": 22.828,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12.121,
    "y": 22.121,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 11.414,
    "y": 21.414,
  },
  {
    "alpha": 1,
    "composite": "destination-over",
    "fillStyle": "rgba(0, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10.707,
    "y": 20.707,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > blur: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 0.5,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12,
    "y": 20,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 11.414,
    "y": 21.414,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 22,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 8.586,
    "y": 21.414,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 8,
    "y": 20,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 8.586,
    "y": 18.586,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 18,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 11.414,
    "y": 18.586,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 14,
    "y": 20,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12.828,
    "y": 22.828,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 24,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 7.172000000000001,
    "y": 22.828,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 6,
    "y": 20,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 7.172000000000001,
    "y": 17.172,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 16,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12.828,
    "y": 17.172,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > echo: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 0.125,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 28,
    "y": 20,
  },
  {
    "alpha": 0.25,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 22,
    "y": 20,
  },
  {
    "alpha": 0.5,
    "composite": "destination-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 16,
    "y": 20,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > glitch: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 14,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 255, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 6,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 13.875,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 6.125,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 8.068999999999999,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 11.931000000000001,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 9.185,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10.815,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 11.838000000000001,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 8.161999999999999,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10.814,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 9.186,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10.462,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 9.538,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 6.207,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 13.793,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 7.362,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 12.638,
    "y": 20,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > glow: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 12,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 6,
    "shadowColor": "rgba(255, 255, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > neon: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 16,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 8,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 4,
    "op": "strokeText",
    "shadowBlur": 4,
    "shadowColor": "rgba(0, 234, 255, 1)",
    "strokeStyle": "rgba(0, 234, 255, 1)",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "lineWidth": 2,
    "op": "strokeText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "strokeStyle": "#ffffff",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(0, 234, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
]
`;

exports[`golden op-trace per effect (registry + paintGlyphPasses pass 5) > retro: representative glyph token → stable op trace 1`] = `
[
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(255, 0, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10.6,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 255, 0, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "lighter",
    "fillStyle": "rgba(0, 0, 255, 1)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 9.4,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.65)",
    "op": "fillText",
    "shadowBlur": 0,
    "shadowColor": "transparent",
    "text": "Ab",
    "x": 10,
    "y": 20,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "beginPath",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "op": "clip",
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.174)",
    "op": "fillRect",
    "x": 18.58,
    "y": 23.744,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.126)",
    "op": "fillRect",
    "x": 15.18,
    "y": 22.32,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.095)",
    "op": "fillRect",
    "x": 17.36,
    "y": 19.68,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.14)",
    "op": "fillRect",
    "x": 22.04,
    "y": 17.744,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.179)",
    "op": "fillRect",
    "x": 19.240000000000002,
    "y": 8.416,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.147)",
    "op": "fillRect",
    "x": 13.4,
    "y": 16.16,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.096)",
    "op": "fillRect",
    "x": 28.14,
    "y": 18.672,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.156)",
    "op": "fillRect",
    "x": 22.54,
    "y": 16.672,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.105)",
    "op": "fillRect",
    "x": 11.16,
    "y": 23.584,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.148)",
    "op": "fillRect",
    "x": 13.4,
    "y": 9.008,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.174)",
    "op": "fillRect",
    "x": 23.4,
    "y": 23.472,
  },
  {
    "alpha": 1,
    "composite": "source-over",
    "fillStyle": "rgba(244, 231, 197, 0.149)",
    "op": "fillRect",
    "x": 12.76,
    "y": 11.552,
  },
]
`;
